Refactor: Patient service